完成log查询页面 完成用户使用的定值页面

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -3,6 +3,9 @@ create=Create
 edit=Edit
 delete=Delete
 relate=Create Settings
+view=View
+export=Export
+locale=en-gb
 tip_inputname=Please input user name
 tip_inputpwd=Please input password
 tip_login=Please login
@@ -93,3 +96,20 @@ mgrline_apply_fail=Fail to apply new line configure to Manager board!
 mgrline_apply_success=Success to apply new line configure to Manager board.
 systime_apply_fail=Fail to setup time!
 systime_apply_success=Success to setup time.
+pagination_first=First
+pagination_prev=Previous
+pagination_next=Next
+pagination_last=Last
+loglevel_error=Error
+loglevel_warning=Warning
+loglevel_info=Info
+setting_vaildata_type=Type error
+setting_vaildata_minmax=minmax error
+setting_vaildata_step=step error
+file_thead_name=Name
+file_thead_date=Date
+file_thead_size=Size
+file_thead_faulttype=Fault Type
+file_thead_triggertype=Trigger Type
+file_thead_distance=Fault Distance
+
