--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -3,6 +3,9 @@ create=\u589E\u52A0
 edit=\u4FEE\u6539
 delete=\u5220\u9664
 relate=\u6839\u636E\u672C\u6A21\u5757\u53C2\u6570\u521B\u5EFA\u5B9A\u503C
+view=\u67E5\u770B
+export=\u5BFC\u51FA
+locale=zh-cn
 tip_inputname=\u8BF7\u586B\u5199\u7528\u6237\u540D
 tip_inputpwd=\u8BF7\u586B\u5199\u5BC6\u7801
 tip_login=\u8BF7\u767B\u5F55
@@ -93,3 +96,19 @@ mgrline_apply_fail=\u5E94\u7528\u7BA1\u7406\u677F\u65B0\u7EBF\u8DEF\u914D\u7F6E\
 mgrline_apply_success=\u5E94\u7528\u7BA1\u7406\u677F\u65B0\u7EBF\u8DEF\u914D\u7F6E\u6210\u529F.
 systime_apply_fail=\u8BBE\u7F6E\u65F6\u95F4\u5931\u8D25!
 systime_apply_success=\u8BBE\u7F6E\u65F6\u95F4\u6210\u529F.
+pagination_first=\u7B2C\u4E00\u9875
+pagination_prev=\u4E0A\u4E00\u9875
+pagination_next=\u4E0B\u4E00\u9875
+pagination_last=\u6700\u672B\u9875
+loglevel_error=\u9519\u8BEF
+loglevel_warning=\u8B66\u544A
+loglevel_info=\u4FE1\u606F
+setting_vaildata_type=\u8F93\u5165\u7684\u503C\u4E0D\u7B26\u5408\u7C7B\u578B\u8981\u6C42
+setting_vaildata_minmax=\u8F93\u5165\u7684\u503C\u4E0D\u7B26\u5408\u6700\u5927\u503C\u6700\u5C0F\u503C\u8303\u56F4
+setting_vaildata_step=\u8F93\u5165\u7684\u503C\u4E0D\u7B26\u5408\u6B65\u8FDB\u8981\u6C42
+file_thead_name=\u6587\u4EF6\u540D
+file_thead_date=\u65F6\u95F4
+file_thead_size=\u6587\u4EF6\u5927\u5C0F
+file_thead_faulttype=\u6545\u969C\u76F8\u522B
+file_thead_triggertype=\u8DF3\u95F8\u76F8\u522B
+file_thead_distance=\u6545\u969C\u6D4B\u8DDD
