--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -9,6 +9,7 @@ Inputaccount_tip=Account
 Inputpwd_tip=Password
 close=Close
 confirm=Confirm
+query=Query
 btn_ok=Confirm
 btn_cancel=Cancel
 operate_confirm=Operate Confirm
@@ -20,6 +21,7 @@ edit=Edit
 delete=Delete
 relate=Create Settings
 update=Update
+period=Period
 user_admin=Administrator
 user_guest=Guest
 user_engineer=Engineer
@@ -218,3 +220,6 @@ log_thead_date=Date
 log_thead_content=Content
 log_thead_user=User
 log_thead_addr=Ip Address
+numPrePage=Shown pre page
+style_icon=Icon
+style_list=List
