--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -9,6 +9,7 @@ Inputpwd_tip=\u8bf7\u8f93\u5165\u5bc6\u7801
 company_name=\u4e0a\u6d77\u5f55\u6ce2\u4fa0\u79d1\u6280\u6709\u9650\u516c\u53f8
 close=\u5173\u95ed
 confirm=\u786e\u5b9a
+query=\u67E5\u8BE2
 btn_ok=\u786E\u5B9A
 btn_cancel=\u53D6\u6D88
 operate_confirm=\u64CD\u4F5C\u786E\u8BA4
@@ -19,6 +20,7 @@ create=\u589E\u52A0
 edit=\u4FEE\u6539
 delete=\u5220\u9664
 update=\u66F4\u65B0
+period=\u65F6\u95F4\u6BB5
 user_admin=\u7BA1\u7406\u5458
 user_guest=\u6E38\u5BA2
 user_engineer=\u5DE5\u7A0B\u5E08
@@ -216,3 +218,6 @@ log_thead_date=\u65F6\u95F4
 log_thead_content=\u5185\u5BB9
 log_thead_user=\u64CD\u4F5C\u4EBA
 log_thead_addr=IP\u5730\u5740
+numPrePage=\u6BCF\u9875\u663E\u793A\u6570
+style_icon=\u56FE\u5F62
+style_list=\u5217\u8868
