完善录波文件页面 增加应用配置文件

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -112,4 +112,15 @@ file_thead_size=Size
 file_thead_faulttype=Fault Type
 file_thead_triggertype=Trigger Type
 file_thead_distance=Fault Distance
-
+faulttype_A=AG
+faulttype_B=BG
+faulttype_C=CG
+faulttype_AB=AB
+faulttype_BC=BC
+faulttype_CA=CA
+faulttype_ABG=ABG
+faulttype_BCG=BCG
+faulttype_CAG=CAG
+faulttype_ABC=ABC
+faulttype_ABCG=ABCG
+fault_distance=Distance
