--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -112,3 +112,15 @@ file_thead_size=\u6587\u4EF6\u5927\u5C0F
 file_thead_faulttype=\u6545\u969C\u76F8\u522B
 file_thead_triggertype=\u8DF3\u95F8\u76F8\u522B
 file_thead_distance=\u6545\u969C\u6D4B\u8DDD
+faulttype_A=A\u76F8\u63A5\u5730
+faulttype_B=B\u76F8\u63A5\u5730
+faulttype_C=C\u76F8\u63A5\u5730
+faulttype_AB=AB\u4E24\u76F8\u77ED\u8DEF
+faulttype_BC=BC\u4E24\u76F8\u77ED\u8DEF
+faulttype_CA=CA\u4E24\u76F8\u77ED\u8DEF
+faulttype_ABG=AB\u4E24\u76F8\u77ED\u8DEF\u63A5\u5730
+faulttype_BCG=BC\u4E24\u76F8\u77ED\u8DEF\u63A5\u5730
+faulttype_CAG=CA\u4E24\u76F8\u77ED\u8DEF\u63A5\u5730
+faulttype_ABC=ABC\u4E09\u76F8\u77ED\u8DEF
+faulttype_ABCG=ABCG\u4E09\u76F8\u77ED\u8DEF\u63A5\u5730
+fault_distance=\u6D4B\u8DDD
