调整用户登录首页面 增加登陆、注销 调整不同用户的导航条菜单

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -3,6 +3,8 @@ product_name=Fault Recorder Management Platform
 brand=Fault Recorder Management Platform
 company_name=Shanghai Recordman Technology Co., Ltd.
 login=Sign in
+logout=Sign Out
+welcome=Hello,
 login_tip=Sign in to your account
 login_error_tip=User name or password is incorrect, please re-enter
 Inputaccount_tip=Account
