修改装置基本参数页面

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -124,3 +124,6 @@ faulttype_CAG=CAG
 faulttype_ABC=ABC
 faulttype_ABCG=ABCG
 fault_distance=Distance
+manualrecord_fail=Fail to trigger record manually
+manualrecord_success=Success to trigger record manually
+
