--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -38,6 +38,7 @@ nav_dfu_modules=Function Modules
 nav_dfu_setting=Setting Parameter
 nav_dfu_apply=Apply Configure
 nav_dfu=DFU Parameter
+nav_manualrecord=Manual Record
 nav_mgr=Management Board
 nav_mgr_network=Outward Network
 nav_mgr_Line=Line Parameter
@@ -225,3 +226,5 @@ log_thead_addr=Ip Address
 numPrePage=Shown pre page
 style_icon=Icon
 style_list=List
+manualrecord=Manual Record
+manualrecord_intro=Manual Record
