--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -42,6 +42,7 @@ nav_mgr_network=\u5BF9\u5916\u7F51\u7EDC
 nav_mgr_Line=\u7EBF\u8DEF\u53C2\u6570
 nav_mgr_config=\u8FD0\u884C\u53C2\u6570
 nav_faultrecord=\u6545\u969c\u5f55\u6ce2
+nav_manualrecord=\u624B\u5DE5\u5F55\u6CE2
 nav_systemtool=\u7CFB\u7EDF\u5DE5\u5177
 nav_sys_settime=\u65f6\u95f4\u8bbe\u7f6e
 nav_sys_upgrade=\u8f6f\u4ef6\u5347\u7ea7
@@ -223,3 +224,5 @@ log_thead_addr=IP\u5730\u5740
 numPrePage=\u6BCF\u9875\u663E\u793A\u6570
 style_icon=\u56FE\u5F62
 style_list=\u5217\u8868
+manualrecord=\u624B\u5DE5\u5F55\u6CE2
+manualrecord_intro=\u70B9\u51FB\u6309\u94AE,\u624B\u5DE5\u89E6\u53D1\u88C5\u7F6E\u751F\u6210\u5F55\u6CE2\u6587\u4EF6.
