完成检修人员使用的通道配置页面

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -126,4 +126,5 @@ faulttype_ABCG=ABCG
 fault_distance=Distance
 manualrecord_fail=Fail to trigger record manually
 manualrecord_success=Success to trigger record manually
-
+board_ai=Gather Board
+board_di=Digit Board
