--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -144,6 +144,13 @@ channel_unit1=Unit 1st
 channel_rate2=Rate 2nd
 channel_unit2=Unit 2nd
 channel_val=Default Value
+channel_th_enable=Enable
+channel_th_terminal=Terminal
+channel_th_name=Name
+channel_enable_all=Enable All
+channel_disable_all=Disable All
+channeltype_ai=Analog
+channeltype_di=Switch
 module_list=Modules
 module_property=Module Property
 module_config=Module Configures
