--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -143,6 +143,13 @@ channel_unit1=\u5355\u4F4D(\u91CF\u7EB2\u7C7B\u578B1)
 channel_rate2=\u6BD4\u4F8B\u7CFB\u6570(\u91CF\u7EB2\u7C7B\u578B2)
 channel_unit2=\u5355\u4F4D(\u91CF\u7EB2\u7C7B\u578B2)
 channel_val=\u9ED8\u8BA4\u503C
+channel_th_enable=\u662F\u5426\u5F55\u6CE2
+channel_th_terminal=\u5185\u90E8\u7AEF\u5B50
+channel_th_name=\u901A\u9053\u540D\u79F0
+channel_enable_all=\u5168\u90E8\u542F\u7528
+channel_disable_all=\u5168\u90E8\u7981\u7528
+channeltype_ai=\u6A21\u62DF\u91CF
+channeltype_di=\u5F00\u5173\u91CF
 module_list=\u6A21\u5757\u5217\u8868
 module_property=\u6A21\u5757\u5C5E\u6027
 module_config=\u6A21\u5757\u914D\u7F6E
