--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -126,3 +126,5 @@ faulttype_ABCG=ABCG\u4E09\u76F8\u77ED\u8DEF\u63A5\u5730
 fault_distance=\u6D4B\u8DDD
 manualrecord_fail=\u624B\u5DE5\u89E6\u53D1\u5F55\u6CE2\u5931\u8D25
 manualrecord_success=\u624B\u5DE5\u89E6\u53D1\u5F55\u6CE2\u6210\u529F
+board_ai=\u91C7\u96C6\u63A7\u5236
+board_di=\u6570\u5B57\u91CF\u677F
