增加WEB容器退出时的事件监听 解决WEB容器退出失败问题

--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -23,8 +23,8 @@ edit=\u4FEE\u6539
 delete=\u5220\u9664
 update=\u66F4\u65B0
 period=\u65F6\u95F4\u6BB5
-user_admin=\u7BA1\u7406\u5458
-user_guest=\u6E38\u5BA2
+user_admin=\u68C0\u4FEE\u4EBA\u5458
+user_guest=\u8FD0\u884C\u4EBA\u5458
 user_engineer=\u5DE5\u7A0B\u5E08
 nav_runstatus=\u8FD0\u884C\u72B6\u6001
 nav_setup=\u914D\u7F6E
