--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -9,7 +9,7 @@ locale=zh-cn
 tip_inputname=\u8BF7\u586B\u5199\u7528\u6237\u540D
 tip_inputpwd=\u8BF7\u586B\u5199\u5BC6\u7801
 tip_login=\u8BF7\u767B\u5F55
-tip_guest=\u6E38\u5BA2\u65E0\u9700\u5BC6\u7801\uFF0C\u53EF\u76F4\u63A5\u767B\u5F55
+tip_guest=\u8FD0\u884C\u4EBA\u5458\u65E0\u9700\u5BC6\u7801\uFF0C\u53EF\u76F4\u63A5\u67E5\u770B\u8FD0\u884C\u60C5\u51B5
 oper_success=\u64CD\u4F5C\u6210\u529F
 oper_fail=\u64CD\u4F5C\u5931\u8D25
 operate_confirm=\u64CD\u4F5C\u786E\u8BA4
