--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -6,6 +6,8 @@ relate=Create Settings
 view=View
 export=Export
 locale=en-gb
+yes=yes
+no=no
 tip_inputname=Please input user name
 tip_inputpwd=Please input password
 tip_login=Please login
@@ -128,3 +130,21 @@ manualrecord_fail=Fail to trigger record manually
 manualrecord_success=Success to trigger record manually
 board_ai=Gather Board
 board_di=Digit Board
+terminal_id=Terminal
+terminal_board=Board
+terminal_index=Index
+terminal_name=Terminal Name
+terminal_type=Terminal Type
+terminal_Rate=Rate Factor
+terminal_debounce=Debounce Time(us)
+terminal_reverse=Reverse
+channel_heading=Channel Information
+channel_name=Channel Name
+channel_id=Channel ID
+channel_unit=Unit
+channel_rate1=Rate 1st
+channel_unit1=Unit 1st
+channel_rate2=Rate 2nd
+channel_unit2=Unit 2nd
+channel_val=Value
+isEnable=enable
