--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -6,6 +6,8 @@ relate=\u6839\u636E\u672C\u6A21\u5757\u53C2\u6570\u521B\u5EFA\u5B9A\u503C
 view=\u67E5\u770B
 export=\u5BFC\u51FA
 locale=zh-cn
+yes=\u662F
+no=\u5426
 tip_inputname=\u8BF7\u586B\u5199\u7528\u6237\u540D
 tip_inputpwd=\u8BF7\u586B\u5199\u5BC6\u7801
 tip_login=\u8BF7\u767B\u5F55
@@ -128,3 +130,22 @@ manualrecord_fail=\u624B\u5DE5\u89E6\u53D1\u5F55\u6CE2\u5931\u8D25
 manualrecord_success=\u624B\u5DE5\u89E6\u53D1\u5F55\u6CE2\u6210\u529F
 board_ai=\u91C7\u96C6\u63A7\u5236
 board_di=\u6570\u5B57\u91CF\u677F
+terminal_id=\u5185\u90E8\u7AEF\u5B50
+terminal_heading=\u7AEF\u5B50\u4FE1\u606F
+terminal_board=\u6240\u5C5E\u677F\u5361
+terminal_index=\u5E8F\u53F7
+terminal_name=\u7AEF\u5B50\u540D\u79F0
+terminal_type=\u7AEF\u5B50\u7C7B\u578B
+terminal_Rate=\u53D8\u6BD4\u7CFB\u6570
+terminal_debounce=\u6D88\u6296\u65F6\u95F4(us)
+terminal_reverse=\u662F\u5426\u53CD\u5411
+channel_heading=\u5BF9\u5E94\u901A\u9053\u4FE1\u606F
+channel_name=\u901A\u9053\u540D\u79F0
+channel_id=\u901A\u9053\u6807\u8BC6
+channel_unit=\u5355\u4F4D(\u5F53\u524D\u91CF\u7EB2)
+channel_rate1=\u6BD4\u4F8B\u7CFB\u6570(\u91CF\u7EB21)
+channel_unit1=\u5355\u4F4D(\u91CF\u7EB21)
+channel_rate2=\u6BD4\u4F8B\u7CFB\u6570(\u91CF\u7EB22)
+channel_unit2=\u5355\u4F4D(\u91CF\u7EB22)
+channel_val=\u9ED8\u8BA4\u503C
+isEnable=\u662F\u5426\u5F55\u6CE2
