修改登录页面

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -4,6 +4,8 @@ brand=Fault Recorder Management Platform
 company_name=Shanghai Recordman Technology Co., Ltd.
 login=Sign in
 logout=Sign Out
+loginAsGuest=Browser as a guest
+or=Or
 welcome=Hello,
 login_tip=Sign in to your account
 login_error_tip=User name or password is incorrect, please re-enter
