--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -3,6 +3,8 @@ product_name=\u6545\u969c\u5f55\u6ce2\u5668\u7ba1\u7406\u5e73\u53f0
 brand=\u6545\u969c\u5f55\u6ce2\u5668\u7ba1\u7406\u5e73\u53f0
 login=\u767B\u5F55
 logout=\u6CE8\u9500
+loginAsGuest=\u4EE5\u6E38\u5BA2\u8EAB\u4EFD\u6D4F\u89C8
+or=\u6216\u8005
 welcome=\u6B22\u8FCE,
 login_tip=\u8bf7\u767B\u5F55
 login_error_tip=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef,\u8bf7\u91cd\u65b0\u8f93\u5165
