实现波形打印功能，还需优化

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -8,6 +8,7 @@ export=Export
 locale=en-gb
 yes=yes
 no=no
+file_notfound=File not found
 tip_inputname=Please input user name
 tip_inputpwd=Please input password
 tip_login=Please login
