--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -8,6 +8,7 @@ export=\u5BFC\u51FA
 locale=zh-cn
 yes=\u662F
 no=\u5426
+file_notfound=\u672A\u627E\u5230\u6307\u5B9A\u6587\u4EF6
 tip_inputname=\u8BF7\u586B\u5199\u7528\u6237\u540D
 tip_inputpwd=\u8BF7\u586B\u5199\u5BC6\u7801
 tip_login=\u8BF7\u767B\u5F55
