完成向量分析和谐波分析

--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -150,3 +150,5 @@ channel_rate2=\u6BD4\u4F8B\u7CFB\u6570(\u91CF\u7EB22)
 channel_unit2=\u5355\u4F4D(\u91CF\u7EB22)
 channel_val=\u9ED8\u8BA4\u503C
 isEnable=\u662F\u5426\u5F55\u6CE2
+toggle_show=\u663E\u793A
+toggle_hide=\u9690\u85CF
