--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -60,6 +60,23 @@ hdr-action=Action Information
 hdr-diBeforeFault=Digital Status Before Fault
 hdr-distatus=Digital Status
 hdr-setting=Setting Information
+wave_menu_selectchl=Select Channels
+wave_menu_hzoomin=Horizontal Zoom In
+wave_menu_hzoomout=Horizontal Zoom Out
+wave_menu_vzoomin=Vertical Zoom In
+wave_menu_vzoomout=Vertical Zoom Out
+wave_menu_print=Print
+wave_menu_download=Download
+wave_menu_vector=Vector Analysis
+wave_menu_harmonic=Harmonic Analysis
+wave_menu_impedance=Impedance Locus
+chlfilter_selectall=Select All
+chlfilter_deselectall=Deselect All
+chlfilter_selectchanged=Select Changed
+wavevector_tip=Select some channels,then move the cursor in the wave graph
+wavevector_angle=Angle
+wavevector_amp=Amplitude
+waveharmonic_tip=Select a channel,then move the cursor in the wave graph
 time=Time
 name=Name
 value=Value
@@ -149,6 +166,9 @@ channel_val=Default Value
 channel_th_enable=Enable
 channel_th_terminal=Terminal
 channel_th_name=Name
+channel_th_show=Show
+channel_th_phase=Phase
+channel_th_changed=Chaned
 channel_enable_all=Enable All
 channel_disable_all=Disable All
 channeltype_ai=Analog
