--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -59,6 +59,23 @@ hdr-action=\u52A8\u4F5C\u4FE1\u606F
 hdr-diBeforeFault=\u6545\u969C\u524D\u5F00\u5173\u91CF\u72B6\u6001
 hdr-distatus=\u5F00\u5173\u91CF\u72B6\u6001
 hdr-setting=\u5B9A\u503C\u4FE1\u606F
+wave_menu_selectchl=\u9009\u62E9\u901A\u9053
+wave_menu_hzoomin=\u6A2A\u5411\u653E\u5927
+wave_menu_hzoomout=\u6A2A\u5411\u7F29\u5C0F
+wave_menu_vzoomin=\u7EB5\u5411\u653E\u5927
+wave_menu_vzoomout=\u7EB5\u5411\u7F29\u5C0F
+wave_menu_print=\u6253\u5370
+wave_menu_download=\u4E0B\u8F7D
+wave_menu_vector=\u5411\u91CF\u5206\u6790
+wave_menu_harmonic=\u8C10\u6CE2\u5206\u6790
+wave_menu_impedance=\u963B\u6297\u8F68\u8FF9
+chlfilter_selectall=\u9009\u62E9\u6240\u6709
+chlfilter_deselectall=\u53D6\u6D88\u9009\u62E9
+chlfilter_selectchanged=\u53EA\u53D8\u4F4D\u901A\u9053
+wavevector_tip=\u5728\u5217\u8868\u4E2D\u52FE\u9009\u901A\u9053,\u7136\u540E\u5728\u6CE2\u5F62\u56FE\u4E2D\u79FB\u52A8\u6E38\u6807
+waveharmonic_tip=\u9009\u62E9\u4E00\u4E2A\u901A\u9053,\u7136\u540E\u5728\u6CE2\u5F62\u56FE\u4E2D\u79FB\u52A8\u6E38\u6807
+wavevector_angle=\u76F8\u89D2
+wavevector_amp=\u5E45\u503C
 time=\u65F6\u95F4
 name=\u540D\u79F0
 value=\u503C
@@ -148,6 +165,9 @@ channel_val=\u9ED8\u8BA4\u503C
 channel_th_enable=\u662F\u5426\u5F55\u6CE2
 channel_th_terminal=\u5185\u90E8\u7AEF\u5B50
 channel_th_name=\u901A\u9053\u540D\u79F0
+channel_th_show=\u662F\u5426\u663E\u793A
+channel_th_phase=\u76F8\u4F4D
+channel_th_changed=\u662F\u5426\u53D8\u4F4D
 channel_enable_all=\u5168\u90E8\u542F\u7528
 channel_disable_all=\u5168\u90E8\u7981\u7528
 channeltype_ai=\u6A21\u62DF\u91CF
