--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -53,7 +53,7 @@ nav_sys_setpwd=Change Password
 nav_sys_reboot=Reboot
 nav_sys_syslog=System Log
 wave-graph=Graph
-wave-hdr=Header
+wave-hdr=Fault Report
 hdr-overview=Overview
 hdr-fault=Fault Information
 hdr-action=Action Information
