--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -52,7 +52,7 @@ nav_sys_setpwd=\u4fee\u6539\u5bc6\u7801
 nav_sys_reboot=\u91cd\u542f
 nav_sys_syslog=\u7cfb\u7edf\u65e5\u5fd7
 wave-graph=\u66F2\u7EBF\u56FE
-wave-hdr=\u5934\u6587\u4EF6
+wave-hdr=\u6545\u969C\u7B80\u62A5
 hdr-overview=\u6982\u51B5\u4FE1\u606F
 hdr-fault=\u6545\u969C\u4FE1\u606F
 hdr-action=\u52A8\u4F5C\u4FE1\u606F
