细节修改 1.去除工程人员登陆接口、运行人员和检修人员改为运行模式和检修模式 2.将运行状态展示整合到故障录波页面

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -4,10 +4,12 @@ brand=Fault Recorder Management Platform
 company_name=Shanghai Recordman Technology Co., Ltd.
 login=Sign in
 logout=Sign Out
-loginAsGuest=Browser as a guest
+switch_run=Switch to Run mode
+switch_Maintenance=Switch to Maintenance mode
+loginAsGuest=Use run mode
 or=Or
 welcome=Hello,
-login_tip=Sign in to your account
+login_tip=Sign in to use maintenance mode
 login_error_tip=User name or password is incorrect, please re-enter
 Inputaccount_tip=Account
 Inputpwd_tip=Password
@@ -81,10 +83,16 @@ time=Time
 name=Name
 value=Value
 phase=Phase
+imp_startcyc=Start Cycle
+imp_endcyc=End Cycle
+imp_kr=kr
+imp_kx=kx
+imp_singlephase=Single Phase
+imp_interphase=InterPhase
 faultinfo=Fault Info
-runstatus_title_overview=Overview
-runstatus_title_subsystem=SubSystem
-runstatus_title_function=Function
+runstatus_title_overview=System Status
+runstatus_title_subsystem=SubSystem Status
+runstatus_title_function=Network Information
 runstatus_title_Info=Information
 devconf_heading=Device Basic Configure
 devconf_stationname=Station
