--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -3,10 +3,12 @@ product_name=\u6545\u969c\u5f55\u6ce2\u5668\u7ba1\u7406\u5e73\u53f0
 brand=\u6545\u969c\u5f55\u6ce2\u5668\u7ba1\u7406\u5e73\u53f0
 login=\u767B\u5F55
 logout=\u6CE8\u9500
-loginAsGuest=\u4EE5\u6E38\u5BA2\u8EAB\u4EFD\u6D4F\u89C8
+switch_run=\u5207\u6362\u5230\u8FD0\u884C\u6A21\u5F0F
+switch_Maintenance=\u5207\u6362\u5230\u68C0\u4FEE\u6A21\u5F0F
+loginAsGuest=\u4F7F\u7528\u8FD0\u884C\u6A21\u5F0F
 or=\u6216\u8005
 welcome=\u6B22\u8FCE,
-login_tip=\u8bf7\u767B\u5F55
+login_tip=\u767B\u5F55\u4EE5\u4F7F\u7528\u68C0\u4FEE\u6A21\u5F0F
 login_error_tip=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef,\u8bf7\u91cd\u65b0\u8f93\u5165
 Inputaccount_tip=\u8bf7\u8f93\u5165\u7528\u6237\u540d
 Inputpwd_tip=\u8bf7\u8f93\u5165\u5bc6\u7801
@@ -80,10 +82,16 @@ time=\u65F6\u95F4
 name=\u540D\u79F0
 value=\u503C
 phase=\u76F8\u4F4D
+imp_startcyc=\u8D77\u59CB\u5468\u6CE2
+imp_endcyc=\u7ED3\u675F\u5468\u6CE2
+imp_kr=\u96F6\u5E8F\u8865\u507F\u7CFB\u6570kr
+imp_kx=\u96F6\u5E8F\u8865\u507F\u7CFB\u6570kx
+imp_singlephase=\u5355\u76F8
+imp_interphase=\u76F8\u95F4
 faultinfo=\u6545\u969C\u4FE1\u606F
-runstatus_title_overview=\u603B\u89C8
-runstatus_title_subsystem=\u5B50\u7CFB\u7EDF
-runstatus_title_function=\u529F\u80FD
+runstatus_title_overview=\u4E3B\u7CFB\u7EDF\u72B6\u6001
+runstatus_title_subsystem=\u5B50\u7CFB\u7EDF\u72B6\u6001
+runstatus_title_function=\u7F51\u7EDC\u4FE1\u606F
 runstatus_title_Info=\u4FE1\u606F
 devconf_heading=\u88C5\u7F6E\u57FA\u672C\u53C2\u6570
 devconf_stationname=\u5382\u7AD9\u540D\u79F0
