增加进程管理页面

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -151,3 +151,14 @@ channel_val=Value
 isEnable=enable
 toggle_show=Show
 toggle_hide=Hide
+cpu_usage=Cpu Usage
+usage=Usage
+memory=Memory
+memory_usage=Memory Usage
+used=Used
+alive=Alive
+disk_usage=Disk Usage
+disk_volume=Disk Volume
+total=Total
+online=online
+offline=offline
