--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -152,3 +152,14 @@ channel_val=\u9ED8\u8BA4\u503C
 isEnable=\u662F\u5426\u5F55\u6CE2
 toggle_show=\u663E\u793A
 toggle_hide=\u9690\u85CF
+cpu_usage=Cpu\u4F7F\u7528\u7387
+usage=\u4F7F\u7528\u7387
+memory=\u5185\u5B58
+memory_usage=\u5185\u5B58\u4F7F\u7528\u7387
+used=\u5DF2\u4F7F\u7528
+alive=\u53EF\u7528
+disk_usage=\u78C1\u76D8\u4F7F\u7528\u7387
+disk_volume=\u78C1\u76D8\u5BB9\u91CF
+total=\u603B\u91CF
+online=\u5728\u7EBF
+offline=\u79BB\u7EBF
