--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -1,7 +1,7 @@
 web_title=Recordman-Fault Recorder Management Platform
 product_name=Fault Recorder Management Platform
 brand=Fault Recorder Management Platform
-company_name=Shanghai Recordman Technology Co., Ltd.
+company_name=XiaoBo Technology Co., Ltd.
 login=Sign in
 logout=Sign Out
 switch_run=Switch to Run mode
@@ -54,6 +54,7 @@ nav_sys_upgrade=Software Upgrade
 nav_sys_setpwd=Change Password
 nav_sys_reboot=Reboot
 nav_sys_syslog=System Log
+nav_sys_process=Process Manage
 wave-graph=Graph
 wave-hdr=Fault Report
 hdr-overview=Overview
@@ -265,3 +266,9 @@ style_icon=Icon
 style_list=List
 manualrecord=Manual Record
 manualrecord_intro=Manual Record
+process_th_name=Name
+process_th_desc=Desc
+process_th_cpu=Cpu
+process_th_memory=Memory
+process_th_time=Last Time
+process_th_status=Status
