--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -12,7 +12,7 @@ login_tip=\u767B\u5F55\u4EE5\u4F7F\u7528\u68C0\u4FEE\u6A21\u5F0F
 login_error_tip=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef,\u8bf7\u91cd\u65b0\u8f93\u5165
 Inputaccount_tip=\u8bf7\u8f93\u5165\u7528\u6237\u540d
 Inputpwd_tip=\u8bf7\u8f93\u5165\u5bc6\u7801
-company_name=\u4e0a\u6d77\u5f55\u6ce2\u4fa0\u79d1\u6280\u6709\u9650\u516c\u53f8
+company_name=\u5C0F\u6CE2\u79D1\u6280
 close=\u5173\u95ed
 confirm=\u786e\u5b9a
 query=\u67E5\u8BE2
@@ -53,6 +53,7 @@ nav_sys_upgrade=\u8f6f\u4ef6\u5347\u7ea7
 nav_sys_setpwd=\u4fee\u6539\u5bc6\u7801
 nav_sys_reboot=\u91cd\u542f
 nav_sys_syslog=\u7cfb\u7edf\u65e5\u5fd7
+nav_sys_process=\u8FDB\u7A0B\u7BA1\u7406
 wave-graph=\u66F2\u7EBF\u56FE
 wave-hdr=\u6545\u969C\u7B80\u62A5
 hdr-overview=\u6982\u51B5\u4FE1\u606F
@@ -263,3 +264,9 @@ style_icon=\u56FE\u5F62
 style_list=\u5217\u8868
 manualrecord=\u624B\u5DE5\u5F55\u6CE2
 manualrecord_intro=\u70B9\u51FB\u6309\u94AE,\u624B\u5DE5\u89E6\u53D1\u88C5\u7F6E\u751F\u6210\u5F55\u6CE2\u6587\u4EF6.
+process_th_name=\u540D\u79F0
+process_th_desc=\u63CF\u8FF0
+process_th_cpu=Cpu\u5360\u7528\u7387
+process_th_memory=\u5185\u5B58\u5360\u7528\u7387
+process_th_time=\u6700\u8FD1\u542F\u52A8\u65F6\u95F4
+process_th_status=\u72B6\u6001
